Added Kyosk Project to solution

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,23 @@
 *.exe
 *.out
 *.app
+Kyosk/Debug/config.conf
+Kyosk/Debug/Kyosk.ilk
+Kyosk/Debug/logs/myeasylog.log
+Kyosk/ipch/kyosk-5a34e045/kyosk-d57fd45d.ipch
+Kyosk/Debug/Kyosk.pdb
+Kyosk/Kyosk.sdf
+Kyosk/Kyosk/Debug/Kyosk.log
+Kyosk/Kyosk/Debug/vc120.pdb
+Kyosk/Kyosk/Debug/Kyosk.tlog/link.write.1.tlog
+Kyosk/Kyosk/Debug/Kyosk.res
+Kyosk/Kyosk/Debug/Kyosk.tlog/cl.command.1.tlog
+Kyosk/Kyosk/Debug/Kyosk.tlog/rc.read.1.tlog
+Kyosk/Kyosk/Debug/Kyosk.tlog/CL.write.1.tlog
+Kyosk/Kyosk/Debug/Kyosk.tlog/CL.read.1.tlog
+Kyosk/Kyosk/Debug/Kyosk.tlog/link.command.1.tlog
+Kyosk/Kyosk/Debug/Kyosk.tlog/Kyosk.lastbuildstate
+Kyosk/Kyosk/Debug/vc120.idb
+Kyosk/Kyosk/Debug/Kyosk.tlog/link.read.1.tlog
+Kyosk/Kyosk/Debug/Kyosk.tlog/rc.command.1.tlog
+Kyosk/Kyosk/Debug/Kyosk.tlog/rc.write.1.tlog
