Added DesktopKeyLogger project to solution

--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,24 @@ Kyosk/Kyosk/Debug/vc120.idb
 Kyosk/Kyosk/Debug/Kyosk.tlog/link.read.1.tlog
 Kyosk/Kyosk/Debug/Kyosk.tlog/rc.command.1.tlog
 Kyosk/Kyosk/Debug/Kyosk.tlog/rc.write.1.tlog
+DesktopKeyLogger/Debug/DesktopKeyLogger.ilk
+DesktopKeyLogger/Debug/DesktopKeyLogger.pdb
+DesktopKeyLogger/DesktopKeyLogger.sdf
+DesktopKeyLogger/Release/DesktopKeyLogger.pdb
+DesktopKeyLogger/Release/config.conf
+DesktopKeyLogger/ipch/desktopkeylogger-a0bbaf5b/desktopkeylogger-1a8cef0f.ipch
+DesktopKeyLogger/ipch/desktopkeylogger-a0bbaf5b/desktopkeylogger-27332449.ipch
+DesktopKeyLogger/DesktopKeyLogger/Release/vc120.pdb
+DesktopKeyLogger/DesktopKeyLogger/Release/DesktopKeyLogger.tlog/rc.write.1.tlog
+DesktopKeyLogger/DesktopKeyLogger/Release/DesktopKeyLogger.tlog/rc.read.1.tlog
+DesktopKeyLogger/DesktopKeyLogger/Release/DesktopKeyLogger.tlog/rc.command.1.tlog
+DesktopKeyLogger/DesktopKeyLogger/Release/DesktopKeyLogger.tlog/link.command.1.tlog
+DesktopKeyLogger/DesktopKeyLogger/Release/DesktopKeyLogger.log
+DesktopKeyLogger/DesktopKeyLogger/Release/DesktopKeyLogger.tlog/cl.command.1.tlog
+DesktopKeyLogger/DesktopKeyLogger/Release/DesktopKeyLogger.tlog/CL.write.1.tlog
+DesktopKeyLogger/DesktopKeyLogger/Release/DesktopKeyLogger.tlog/link.read.1.tlog
+DesktopKeyLogger/DesktopKeyLogger/Release/DesktopKeyLogger.tlog/DesktopKeyLogger.lastbuildstate
+DesktopKeyLogger/DesktopKeyLogger/Release/DesktopKeyLogger.tlog/link.write.1.tlog
+DesktopKeyLogger/DesktopKeyLogger/Release/DesktopKeyLogger.res
+DesktopKeyLogger/DesktopKeyLogger/Release/DesktopKeyLogger.tlog/CL.read.1.tlog
+DesktopKeyLogger/DesktopKeyLogger/Debug/vc120.pdb
