Added KeyConfig and DesktopTrayIcon projects to solution

--- a/.gitignore
+++ b/.gitignore
@@ -67,3 +67,16 @@ DesktopKeyLogger/DesktopKeyLogger/Release/DesktopKeyLogger.tlog/link.write.1.tlo
 DesktopKeyLogger/DesktopKeyLogger/Release/DesktopKeyLogger.res
 DesktopKeyLogger/DesktopKeyLogger/Release/DesktopKeyLogger.tlog/CL.read.1.tlog
 DesktopKeyLogger/DesktopKeyLogger/Debug/vc120.pdb
+DesktopKeyLogger/DesktopKeyLogger/Debug/vc120.idb
+DesktopKeyLogger/DesktopKeyLogger/Debug/DesktopKeyLogger.tlog/cl.command.1.tlog
+DesktopKeyLogger/DesktopKeyLogger/Debug/DesktopKeyLogger.log
+DesktopKeyLogger/DesktopKeyLogger/Debug/DesktopKeyLogger.tlog/link.read.1.tlog
+DesktopKeyLogger/DesktopKeyLogger/Debug/DesktopKeyLogger.tlog/rc.command.1.tlog
+DesktopKeyLogger/DesktopKeyLogger/Debug/DesktopKeyLogger.tlog/CL.read.1.tlog
+DesktopKeyLogger/DesktopKeyLogger/Debug/DesktopKeyLogger.tlog/link.command.1.tlog
+DesktopKeyLogger/DesktopKeyLogger/Debug/DesktopKeyLogger.tlog/rc.read.1.tlog
+DesktopKeyLogger/DesktopKeyLogger/Debug/DesktopKeyLogger.tlog/DesktopKeyLogger.lastbuildstate
+DesktopKeyLogger/DesktopKeyLogger/Debug/DesktopKeyLogger.tlog/CL.write.1.tlog
+DesktopKeyLogger/DesktopKeyLogger/Debug/DesktopKeyLogger.tlog/rc.write.1.tlog
+DesktopKeyLogger/DesktopKeyLogger/Debug/DesktopKeyLogger.tlog/link.write.1.tlog
+DesktopKeyLogger/DesktopKeyLogger/Debug/DesktopKeyLogger.res
