Removed unwanted files

--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,67 @@ DesktopKeyLogger/DesktopKeyLogger/Debug/DesktopKeyLogger.tlog/CL.write.1.tlog
 DesktopKeyLogger/DesktopKeyLogger/Debug/DesktopKeyLogger.tlog/rc.write.1.tlog
 DesktopKeyLogger/DesktopKeyLogger/Debug/DesktopKeyLogger.tlog/link.write.1.tlog
 DesktopKeyLogger/DesktopKeyLogger/Debug/DesktopKeyLogger.res
+DesktopTrayIcon/Debug/DesktopTrayIcon.ilk
+DesktopTrayIcon/Debug/DesktopTrayIcon.pdb
+DesktopTrayIcon/DesktopTrayIcon/Debug/DesktopTrayIcon.tlog/CL.read.1.tlog
+DesktopTrayIcon/DesktopTrayIcon/Debug/DesktopTrayIcon.res
+DesktopTrayIcon/DesktopTrayIcon/Release/DesktopTrayIcon.tlog/link.write.1.tlog
+DesktopTrayIcon/DesktopTrayIcon/Debug/vc120.idb
+DesktopTrayIcon/DesktopTrayIcon.sdf
+DesktopTrayIcon/DesktopTrayIcon/Debug/DesktopTrayIcon.tlog/DesktopTrayIcon.lastbuildstate
+DesktopTrayIcon/DesktopTrayIcon/Release/DesktopTrayIcon.log
+DesktopTrayIcon/DesktopTrayIcon/Debug/DesktopTrayIcon.tlog/rc.write.1.tlog
+DesktopTrayIcon/DesktopTrayIcon/Release/DesktopTrayIcon.tlog/rc.write.1.tlog
+KeyConfig/ipch/keyconfig-2bdb520f/keyconfig-90780ccb.ipch
+DesktopTrayIcon/Release/DesktopTrayIcon.pdb
+DesktopTrayIcon/DesktopTrayIcon/Release/DesktopTrayIcon.tlog/link.read.1.tlog
+KeyConfig/KeyConfig.sdf
+KeyConfig/KeyConfig/Debug/KeyConfig.tlog/CL.write.1.tlog
+DesktopTrayIcon/DesktopTrayIcon/Debug/DesktopTrayIcon.tlog/link.command.1.tlog
+DesktopTrayIcon/DesktopTrayIcon/Release/DesktopTrayIcon.tlog/cl.command.1.tlog
+DesktopTrayIcon/DesktopTrayIcon/Debug/DesktopTrayIcon.tlog/link.write.1.tlog
+DesktopTrayIcon/ipch/desktoptrayicon-21a648db/desktoptrayicon-3f11d30f.ipch
+DesktopTrayIcon/DesktopTrayIcon/Debug/DesktopTrayIcon.tlog/link.read.1.tlog
+DesktopTrayIcon/DesktopTrayIcon/Release/DesktopTrayIcon.tlog/DesktopTrayIcon.lastbuildstate
+KeyConfig/ipch/keyconfig-2bdb520f/keyconfig-c8b50f45.ipch
+KeyConfig/KeyConfig/Debug/KeyConfig.tlog/link.write.1.tlog
+KeyConfig/Debug/KeyConfig.pdb
+DesktopTrayIcon/DesktopTrayIcon/Release/DesktopTrayIcon.tlog/CL.write.1.tlog
+DesktopTrayIcon/ipch/desktoptrayicon-21a648db/desktoptrayicon-94c94909.ipch
+DesktopTrayIcon/DesktopTrayIcon/Debug/DesktopTrayIcon.tlog/rc.command.1.tlog
+DesktopTrayIcon/DesktopTrayIcon/Debug/DesktopTrayIcon.tlog/rc.read.1.tlog
+DesktopTrayIcon/DesktopTrayIcon/Release/DesktopTrayIcon.tlog/rc.command.1.tlog
+KeyConfig/KeyConfig/Debug/KeyConfig.tlog/KeyConfig.lastbuildstate
+DesktopTrayIcon/DesktopTrayIcon/Release/DesktopTrayIcon.tlog/rc.read.1.tlog
+KeyConfig/KeyConfig/Debug/KeyConfig.tlog/link.read.1.tlog
+KeyConfig/KeyConfig/Debug/KeyConfig.res
+DesktopTrayIcon/DesktopTrayIcon/Release/DesktopTrayIcon.tlog/CL.read.1.tlog
+DesktopTrayIcon/DesktopTrayIcon/Debug/DesktopTrayIcon.tlog/cl.command.1.tlog
+DesktopTrayIcon/DesktopTrayIcon/Release/DesktopTrayIcon.tlog/link.command.1.tlog
+KeyConfig/KeyConfig/Debug/KeyConfig.tlog/rc.command.1.tlog
+DesktopTrayIcon/DesktopTrayIcon/Release/vc120.pdb
+KeyConfig/KeyConfig/Debug/KeyConfig.tlog/rc.read.1.tlog
+KeyConfig/KeyConfig/Release/KeyConfig.tlog/cl.command.1.tlog
+KeyConfig/KeyConfig/Debug/vc120.pdb
+DesktopTrayIcon/DesktopTrayIcon/Debug/DesktopTrayIcon.log
+DesktopTrayIcon/DesktopTrayIcon/Debug/DesktopTrayIcon.tlog/CL.write.1.tlog
+DesktopTrayIcon/DesktopTrayIcon/Debug/vc120.pdb
+KeyConfig/KeyConfig/Debug/KeyConfig.log
+KeyConfig/KeyConfig/Release/KeyConfig.res
+KeyConfig/KeyConfig/Release/KeyConfig.tlog/CL.read.1.tlog
+KeyConfig/KeyConfig/Debug/vc120.idb
+KeyConfig/KeyConfig/Release/vc120.pdb
+KeyConfig/KeyConfig/Release/KeyConfig.tlog/rc.write.1.tlog
+KeyConfig/KeyConfig/Release/KeyConfig.tlog/rc.read.1.tlog
+KeyConfig/KeyConfig/Release/KeyConfig.tlog/rc.command.1.tlog
+KeyConfig/KeyConfig/Release/KeyConfig.tlog/link.read.1.tlog
+KeyConfig/KeyConfig/Debug/KeyConfig.tlog/rc.write.1.tlog
+KeyConfig/Debug/KeyConfig.ilk
+KeyConfig/KeyConfig/Release/KeyConfig.tlog/CL.write.1.tlog
+KeyConfig/KeyConfig/Debug/KeyConfig.tlog/CL.read.1.tlog
+KeyConfig/KeyConfig/Release/KeyConfig.log
+KeyConfig/KeyConfig/Release/KeyConfig.tlog/link.command.1.tlog
+KeyConfig/KeyConfig/Debug/KeyConfig.tlog/cl.command.1.tlog
+DesktopTrayIcon/DesktopTrayIcon/Release/DesktopTrayIcon.res
+KeyConfig/KeyConfig/Release/KeyConfig.tlog/KeyConfig.lastbuildstate
+KeyConfig/KeyConfig/Release/KeyConfig.tlog/link.write.1.tlog
