--- a/DesktopKeyLogger/DesktopKeyLogger/DesktopKeyLogger.vcxproj
+++ b/DesktopKeyLogger/DesktopKeyLogger/DesktopKeyLogger.vcxproj
@@ -80,12 +80,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="DesktopKeyLogger.h" />
+    <ClInclude Include="RegistryUtilities.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="DesktopKeyLogger.cpp" />
+    <ClCompile Include="RegistryUtilities.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
