--- a/DesktopKeyLogger/DesktopKeyLogger/DesktopKeyLogger.vcxproj.filters
+++ b/DesktopKeyLogger/DesktopKeyLogger/DesktopKeyLogger.vcxproj.filters
@@ -30,12 +30,18 @@
     <ClInclude Include="DesktopKeyLogger.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="RegistryUtilities.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="DesktopKeyLogger.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="RegistryUtilities.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
