--- a/KeyConfig/KeyConfig/KeyConfig.vcxproj
+++ b/KeyConfig/KeyConfig/KeyConfig.vcxproj
@@ -104,6 +104,7 @@
     <ClInclude Include="FileUtils.h" />
     <ClInclude Include="KeyConfig.h" />
     <ClInclude Include="KeyConfigDlg.h" />
+    <ClInclude Include="RegistryUtilities.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -112,6 +113,7 @@
     <ClCompile Include="FileUtils.cpp" />
     <ClCompile Include="KeyConfig.cpp" />
     <ClCompile Include="KeyConfigDlg.cpp" />
+    <ClCompile Include="RegistryUtilities.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
