--- a/DesktopTrayIcon/DesktopTrayIcon/DesktopTrayIcon.vcxproj
+++ b/DesktopTrayIcon/DesktopTrayIcon/DesktopTrayIcon.vcxproj
@@ -100,6 +100,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="DesktopTrayIcon.ico" />
+    <Image Include="res\Taskbar.ico" />
     <Image Include="small.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
